# edgedb-composable-query

./: Cargo.toml  README.md  gameplan.txt
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql
edgedb-composable-query/: Cargo.toml
edgedb-composable-query-back/: Cargo.toml
edgedb-composable-query-back/src/: args.rs  lib.rs  value.rs
edgedb-composable-query-back/src/composable/snapshots/: edgedb_composable_query__composable__test__query_tests.snap  edgedb_composable_query__composable__test__selector_tests-2.snap  edgedb_composable_query__composable__test__selector_tests.snap
edgedb-composable-query-derive/: Cargo.toml
edgedb-composable-query-derive-old/src/: fields.rs  lib.rs  selector.rs  tokens.rs
edgedb-composable-query-derive-old/src/snapshots/: edgedb_composable_query_derive__test__insta_test_struct_selector.snap.new
edgedb-composable-query-derive-old/tests/cases/: basic-pass.rs
edgedb-composable-query-derive/src/: composable_query.rs  composable_selector.rs  fields.rs  lib.rs  object.rs  opts.rs  query.rs  selector.rs  tokens.rs
edgedb-composable-query-derive/src/snapshots/: edgedb_composable_query_derive__composable_query__test__insta_simpl.snap  edgedb_composable_query_derive__composable_query__test__insta_simpl.snap.new  edgedb_composable_query_derive__composable_query__test__insta_test_empty_struct.snap  edgedb_composable_query_derive__composable_query__test__insta_test_struct.snap  edgedb_composable_query_derive__composable_query__test__insta_test_struct_wrapper.snap  edgedb_composable_query_derive__composable_query__test__insta_test_wrapper.snap.new  edgedb_composable_query_derive__composable_selector__test__insta_test_struct_selector.snap.new  edgedb_composable_query_derive__composable_selector__test__insta_test_wrapper.snap.new  edgedb_composable_query_derive__object__test__insta_test_tuple_direct.snap  edgedb_composable_query_derive__test__insta_test_struct.snap.new  edgedb_composable_query_derive__test__insta_test_struct2.snap.new  edgedb_composable_query_derive__test__insta_test_struct_selector.snap.new  edgedb_composable_query_derive__test__insta_test_struct_wrapper.snap.new  edgedb_composable_query_derive__test__insta_test_tuple_named.snap.new  edgedb_composable_query_derive__test__insta_tests.snap  edgedb_composable_query_derive__test__insta_tests.snap.new
edgedb-composable-query-derive/tests/: test.rs
edgedb-composable-query-derive/tests/cases/: basic-pass.rs
edgedb-composable-query-old/src/: lib.rs
edgedb-composable-query/src/: args.rs  lib.rs  prim.rs  refs.rs  tuples.rs  value.rs  write.rs
edgedb-composable-query/src/composable/: mod.rs
edgedb-composable-query/src/composable/snapshots/: edgedb_composable_query__composable__test__query_tests-2.snap  edgedb_composable_query__composable__test__query_tests-3.snap  edgedb_composable_query__composable__test__query_tests-4.snap  edgedb_composable_query__composable__test__query_tests-5.snap  edgedb_composable_query__composable__test__query_tests-5.snap.new  edgedb_composable_query__composable__test__sync_tests-2.snap  edgedb_composable_query__composable__test__sync_tests-3.snap  edgedb_composable_query__composable__test__sync_tests.snap
example/: Cargo.toml
example/src/: main.rs  models.rs  models2.rs  test2.rs
example/src-old/: main.rs  models.rs  models2.rs  test2.rs
