[package]
    name          = "edgedb-composable-query"
    version       = "0.0.1"
    edition       = "2021"
    license       = "MIT OR Apache-2.0"
    authors       = ["Valentin Golev"]
    description   = "ComposableQuery trait for EdgeDB. Use with edgedb-composable-query-derive."
    documentation = "https://docs.rs/edgedb-composable-query"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
    edgedb-protocol = "0.6.0"
edgedb-tokio = "0.5.0"
    itertools       = "0.11"
