[package]
    name          = "edgedb-composable-query"
    version       = "0.0.1"
    edition       = "2021"
    license       = "MIT OR Apache-2.0"
    authors       = ["Valentin Golev"]
    description   = "ComposableQuery trait for EdgeDB. Use with edgedb-composable-query-derive."
    documentation = "https://docs.rs/edgedb-composable-query"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    edgedb-protocol = "0.6"
    edgedb-tokio    = "0.5"
    itertools       = "0.11"
    nonempty        = "0.9"

    anyhow = "1"
serde = "1.0.193"
serde_json = "1.0.108"


[dev-dependencies]
    tokio = { version = "1.34.0", features = ["full"] }
