[package]
    name    = "example"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    edgedb-composable-query-derive = { path = "../edgedb-composable-query-derive" }
    edgedb-composable-query        = { path = "../edgedb-composable-query" }
    edgedb-protocol                = "0.6.0"
